Populate DB controller
